2008-03-05  Alexander Larsson  <alexl@redhat.com>

        * gfilemonitor.c:
	Make cancellation threadsafe (i.e.
	guarantee its only done once, and always
	done)
	
        * glocaldirectorymonitor.c:
	Make sure we the monitor lives while the
	mounts_changed callback is being called (#520484)

2008-03-04  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* gbufferedinputstream.c: Fix typo in parameter
	documentation.

2008-03-04  Alexander Larsson  <alexl@redhat.com>

        * gfile.c:
	Remove deprecated symbols we kept for one release.

2008-03-04  Murray Cumming  <murrayc@murrayc.com>

	* ginputstream.c:
	* goutputstream.c: Tiny documentation corrections.

2008-03-03  Alexander Larsson  <alexl@redhat.com>

        * gunionvolumemonitor.c:
        * gvolumemonitor.h:
	Fix the adopt_orphan_mount vfunc to take a
	volume_monitor reference in an ABI compat way.
	This change is not API compat, but the added
	arg is not used in the only user of this vfunc, so
	all we get is a harmless warning in gvfs (#520169)
	
2008-03-01  Benjamin Otte  <otte@gnome.org>

	* gfile.c:
	clarify docs for g_file_delete().

2008-02-29  Alexander Larsson  <alexl@redhat.com>

        * glocalfileinfo.c:
        (get_content_type):
	Make sure empty files get text/plain type (#518720)

2008-02-27  Alexander Larsson  <alexl@redhat.com>

        * gcontenttype.c:
	Fix type warnings
	
        * gunixvolume.c:
        (g_unix_volume_mount):
	Add missing GMountMountFlags argument

2008-02-26  Alexander Larsson  <alexl@redhat.com>

        * glocalfile.c:
        (g_local_file_delete):
	Handle filesystems (like ntfs-3g) that return EEXIST instead
	of ENOTEMPTY (#518816)

2008-02-25  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.15.6 ===

2008-02-25  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* gfile.c (g_file_find_enclosing_mount):
	* ginputstream.c (g_input_stream_set_pending):
	* glocalfile.c (g_local_file_find_enclosing_mount):